re PR fortran/34028 (Type mismatch with optimization of ISHFT)

PR fortran/34028
	* trans-intrinsic.c (gfc_conv_intrinsic_ishft): Use correct type.

From-SVN: r130003